# everybody-codes

./: .gitignore  Cargo.toml
algorithmia/: Cargo.toml
algorithmia/src/: lib.rs
algorithmia/src/quest_1/: mod.rs
algorithmia/src/quest_10/: mod.rs
algorithmia/src/quest_11/: mod.rs
algorithmia/src/quest_12/: mod.rs
algorithmia/src/quest_13/: mod.rs
algorithmia/src/quest_14/: mod.rs
algorithmia/src/quest_15/: mod.rs
algorithmia/src/quest_16/: mod.rs
algorithmia/src/quest_17/: mod.rs
algorithmia/src/quest_18/: mod.rs
algorithmia/src/quest_19/: mod.rs
algorithmia/src/quest_2/: mod.rs
algorithmia/src/quest_20/: mod.rs
algorithmia/src/quest_3/: mod.rs
algorithmia/src/quest_4/: mod.rs
algorithmia/src/quest_5/: mod.rs
algorithmia/src/quest_6/: mod.rs
algorithmia/src/quest_7/: mod.rs
algorithmia/src/quest_8/: mod.rs
algorithmia/src/quest_9/: mod.rs
event_frame/quest_1/: mod.rs
event_frame/quest_10/: mod.rs
event_frame/quest_11/: mod.rs
event_frame/quest_12/: mod.rs
event_frame/quest_13/: mod.rs
event_frame/quest_14/: mod.rs
event_frame/quest_15/: mod.rs
event_frame/quest_16/: mod.rs
event_frame/quest_17/: mod.rs
event_frame/quest_18/: mod.rs
event_frame/quest_19/: mod.rs
event_frame/quest_2/: mod.rs
event_frame/quest_20/: mod.rs
event_frame/quest_3/: mod.rs
event_frame/quest_4/: mod.rs
event_frame/quest_5/: mod.rs
event_frame/quest_6/: mod.rs
event_frame/quest_7/: mod.rs
event_frame/quest_8/: mod.rs
event_frame/quest_9/: mod.rs
src/: lib.rs  main.rs
